refactor: format google